--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,187 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* Global style */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Kavoon', cursive;
+  background: url(./assets/img/back.png) no-repeat center center fixed;
+  background-size: cover; 
+  background-blend-mode: overlay;
+}
+
+/* Titre de la page */
+.page-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 20px 0;
+  color: white;
+  text-shadow: 10px 10px 15px rgba(153, 50, 52, 1);
+  text-align: center;
+  -webkit-text-stroke: 0.5px #FD4A93;
+}
+
+/* Contenu textuel */
+.text-content {
+  margin-bottom: 120px;
+}
+
+p {
+  font-size: 1.4rem;
+  margin: 0;
+  text-align: right;
+  color: white;
+  text-shadow: 5px 5px 10px rgba(120, 20, 21, 1);
+  -webkit-text-stroke: 0.5px #FD4A93;
+}
+
+.thumbnail-gallery {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 20px 0;
+  flex-wrap: wrap;
+}
+
+.thumbnail-gallery img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+}
+
+.thumbnail-gallery img:hover {
+  transform: scale(1.1);
+}
+
+
+/* Section Cover Maker */
+.covermaker-section {
+  padding: 20px;
+  background: linear-gradient(to bottom, rgba(230, 65, 132, 0.65), rgba(107, 58, 154, 0.37));
+  border-radius: 15px;
+}
+
+.covermaker-inline {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.form-group {
+  flex: 1;
+  min-width: 150px;
+  max-width: 200px;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.form-label {
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  margin-bottom: 8px;
+  text-transform: uppercase;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.form-input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 100px;
+  background: rgba(107, 58, 154, 0.6);
+  font-size: 14px;
+  text-align: center;
+  color: white;
+}
+
+
+.color-picker-container {
+  margin-top: 10px;
+}
+
+.color-preview-circle {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+
+
+/* Style container */
+.app-container {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height: 100vh;
+}
+
+.main-section,
+.covermaker-section {
+  scroll-snap-align: start;
+  height: 100vh;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+
+/* Grid Layout pour Inputs */
+.covermaker-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.covermaker-grid .form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Bouton CTA */
+.cta-button {
+  margin: 20px auto;
+  display: block;
+  background-color: #d37ab6;
+  color: white;
+  border: 3px solid #800080;
+  padding: 15px 30px;
+  border-radius: 30px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  cursor: pointer;
+}
+
+.cta-button:hover {
+  background-color: #800080;
+  transform: scale(1.05);
+}
+
+
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .page-title {
+    font-size: 1.8rem; 
   }
-  to {
-    transform: rotate(360deg);
+
+  .text-content {
+    margin-top: 20px;
+    margin-bottom: auto;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  p {
+    font-size: 1rem; 
+    text-align: center;
   }
-}
 
-.card {
-  padding: 2em;
-}
+  .thumbnail-gallery img {
+    width: 100px;
+    height: 100px;
+  }
 
-.read-the-docs {
-  color: #888;
+  .thumbnail-gallery {
+    gap: 10px; 
+    flex-direction: row; 
+  }
+
+  .cta-button {
+    font-size: 1rem;
+    padding: 10px 20px;
+  }
 }
