--- a/src/header.css
+++ b/src/header.css
@@ -5,6 +5,8 @@
   text-align: center;
   text-shadow: 0 4px 8px rgba(255, 0, 0, 0.3);
   margin: 0;
+  font-family: 'Kavoon', cursive;
+
 }
 
 /* Logo et titre */
@@ -35,16 +37,15 @@ h2 {
   font-size: 1.2rem;
   color: white;
   text-decoration: none;
-  padding: 5px 10px;
-  border-radius: 5px;
   transition: all 0.3s ease;
-  -webkit-text-stroke: 0.1px rgb(253, 74, 146);
+  -webkit-text-stroke: 0.7px rgb(253, 74, 146);
   text-shadow: 5px 5px 10px rgba(120, 20, 21, 1);
 }
 
 /* Lien au survol */
 .navbar-nav .nav-link:hover {
-  color: pink;
+  color: rgb(236, 142, 157);
+  -webkit-text-stroke: 0.7px rgb(255, 255, 255);
 }
 
 /* Lien actif */
