--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,35 @@ body {
   z-index: 3;
 }
 
+/* Animation de la cover */
+/* .animate-cover-entry {
+  animation: slideInRight 1s ease-in-out forwards;
+} */
+
+/* @keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+} */
+
+/* Animation du CD */
+@keyframes slide-in-half {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(calc(-70%));
+    opacity: 1;
+  }
+}
+
+
 p {
   font-size: 2em;
   margin: 0;
@@ -80,7 +109,7 @@ p {
 /* Section Cover Maker */
 .covermaker-section {
   padding: 20px;
-  background: linear-gradient(to bottom, rgba(230, 65, 132, 0.65), rgba(107, 58, 154, 0.37));
+  /* background: linear-gradient(to bottom, rgba(230, 65, 132, 0.65), rgba(107, 58, 154, 0.37)); */
   border-radius: 15px;
 }
 
